@@ -13,11 +13,15 @@
 		<EOL_SPAN TYPE="NULL" DELEGATE="PROP_VALUE"> </EOL_SPAN>
 		<EOL_SPAN TYPE="NULL" DELEGATE="PROP_VALUE">	</EOL_SPAN>
 	</RULES>
-	<RULES SET="PROP_VALUE" HIGHLIGHT_DIGITS="TRUE">
+	<RULES SET="PROP_VALUE" HIGHLIGHT_DIGITS="TRUE"
+		DIGIT_RE="([[:digit:]]+|#[[:xdigit:]]+)"
+		NO_WORD_SEP="#">
 		<!-- MessageFormat { ... } stuff -->
 		<SPAN TYPE="KEYWORD3" NO_LINE_BREAK="TRUE">
 			<BEGIN>{</BEGIN>
 			<END>}</END>
 		</SPAN>
+		<!-- Sillyness -->
+		<MARK_FOLLOWING TYPE="DIGIT">#</MARK_FOLLOWING>
 	</RULES>
 </MODE>
